--- a/public/offline.html
+++ b/public/offline.html
@@ -15,13 +15,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script>
-      if('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('serviceWorker.js');
-        })
-      }
-    </script>
+    <div id="root">
+      <p>You need internet connection!</p>
+    </div>
   </body>
 </html>
