added meta tags.

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./assets/android-chrome-192x192.png" />
+    <link rel="icon" href="./assets/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Bursa fees calculator by andretai"
-    />
+    <meta name="title" content="Tranzact"/>
+    <meta name="description" content="fees calculator by andretai"/>
+    <meta name="og:title" content="Tranzact"/>
+    <meta name="og:description" content="fees calculator by andretai"/>
+    <meta property="og:image" content="./assets/android-chrome-192x192.png">
+    <meta property="og:url" content="https://bit.ly/2MwOLkH">
+    <meta name="twitter:title" content="Tranzact"/>
+    <meta name="twitter:description" content="fees calculator by andretai"/>
+    <meta property="twitter:image" content="./assets/android-chrome-192x192.png">
+    <meta property="twitter:url" content="https://bit.ly/2MwOLkH">
     <link rel="apple-touch-icon" href="./assets/apple-touch-icon.png" />
     <link rel="manifest" href="./manifest.json" />
     <title>Tranzact</title>
